# read_partitioning

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: construct_plain_dbg.cpp  dbg_partition.cpp  eval_partition.cpp
src/coloring/: labelProp.hpp
src/dbgp/: compactdeBruijnGraph.cpp  compactdeBruijnGraph.hpp  deBruijnGraphGen.hpp  mpi_query.hpp  qry_oracle.hpp  readPartition.cpp  readPartition.hpp  recordTypes.hpp  timer.hpp
src/utils/: io_utils.cpp  io_utils.hpp  mpi_utils.hpp
